--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
-  "name": "jewelry_theme",
+   "name": "clothing-website",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://nailasaleem.github.io/Clothing-Website/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.0",
+    "@reduxjs/toolkit": "^2.8.2",
+    "lucide-react": "^0.536.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1"
   },
   "devDependencies": {
@@ -28,6 +33,7 @@
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
-    "vite": "^7.0.4"
+    "vite": "^7.0.4",
+    "gh-pages": "^6.1.1"
   }
 }
